--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Indicador de conexión -->
+    <div class="connection-status" id="connectionStatus">
+        <span class="status-dot"></span>
+        <span class="status-text">Conectando...</span>
+    </div>
+
     <div class="container">
         <div class="header">
             <h1>Buscador de Obras Sociales</h1>
@@ -15,14 +21,19 @@
         
         <div class="search-container">
             <div class="search-box">
+                <svg class="search-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <circle cx="11" cy="11" r="8"></circle>
+                    <path d="m21 21-4.35-4.35"></path>
+                </svg>
                 <input type="text" 
                        id="searchInput" 
-                       placeholder="Ejemplo: OSDE, SWISS MEDICAL, IOMA..." 
-                       autocomplete="off">
-                <button id="searchButton">
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <circle cx="11" cy="11" r="8"></circle>
-                        <path d="m21 21-4.35-4.35"></path>
+                       placeholder="Ej: OSDE, PAMI, Swiss Medical..." 
+                       autocomplete="off"
+                       spellcheck="false">
+                <button id="clearButton" class="clear-button" style="display: none;">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <line x1="18" y1="6" x2="6" y2="18"></line>
+                        <line x1="6" y1="6" x2="18" y2="18"></line>
                     </svg>
                 </button>
             </div>
@@ -32,7 +43,13 @@
         <div id="results" class="results"></div>
         
         <div id="stats" class="stats">
-            <p>Base de datos lista para buscar</p>
+            <div class="stats-content">
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+                    <circle cx="12" cy="7" r="4"></circle>
+                </svg>
+                <span>Cargando...</span>
+            </div>
         </div>
     </div>
 
